--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/colson0x1/nodewatch#readme",
   "bin": {
-    "nodewatch": "app.js"
+    "nodewatch": "app.js",
+    "watchbro": "app.js"
   },
   "dependencies": {
     "caporal": "^1.4.0",
+    "chalk": "^5.2.0",
     "chokidar": "^3.5.3",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
     "lodash.debounce": "^4.0.8"
   }
 }
